2007-10-22  Aapo Makela <aapo.makela@nokia.com>
	* Added deb-target to Makefile.am to build Debian packages
	* Fixed copyright notices in source files to match the copyright defined in COPYING
	* Added NULL check to cg_strtrimwhite()
	* Added NULL checks and fixed memory leaks in cg_net_selectaddr() and cg_net_gethostinterfaces()
	* Disabled "Expect" HTTP header because it causes IOP issues with some UPnP implementations.
	* Added NULL check to cg_xml_node_getchildnode() macro
	* Fixed Debian specific files and added debug package building

2007-10-02  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_thread_() to return FALSE when the specified object is null.
	* Added cg_http_server_lock() and cg_http_server_unlock().
	* Fixed cg_http_server_clientthread() to remove the thread from the thread list.

2007-09-13  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions to get MAC address.
	* cg_net_interface_setmacaddress(), cg_net_interface_getmacaddress()
	* Changed cg_net_gethostinterfaces() to get the MAC address using GetAdaptersInfo() as default on Windows platform.
	* Changed cg_net_gethostinterfaces() to get the MAC address using ioctl() on Linux platform.
	* Changed cg_net_gethostinterfaces() to get the MAC address using getifaddrs() on other UNIX platform.
	*   Note : Other platforms might not support to get this functions yet. 

2007-08-30  Satoshi Konno <skonno@cybergarage.org>
	* Removed the patent exclusion clause from the license based on BSD.

2007-08-19  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions into <cfile.h>
	  cg_file_setpath()
	  cg_file_setfilename()

2007-07-25  Satoshi Konno <skonno@cybergarage.org>
	* Added the following macros into <cfile.h>
	  cg_file_isseparatorchar()
	  cg_file_ispathseparatorchar()

2007-07-18  Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions to support more raw functions.
	  cg_file_open()
	  cg_file_close()
	  cg_file_write()
	  cg_file_read()